Fix autocomplete down-arrow not showing

--- a/app/assets/stylesheets/govuk-overrides.scss
+++ b/app/assets/stylesheets/govuk-overrides.scss
@@ -87,7 +87,7 @@ button.button.secondary {
 
 
 .autocomplete__dropdown-arrow-down {
-  z-index: 1;
+  z-index: 1 !important;
 }
 
 .autocomplete__input {
